Add root router
