# swagger.json
@@ -29,7 +29,7 @@
     "application/json"
   ],
   "paths": {
-    "/register": {
+    "/auth/register": {
       "post": {
         "tags": [
           "User authentication"
@@ -102,7 +102,7 @@
         }
       }
     },
-    "/login": {
+    "/auth/login": {
       "post": {
         "tags": [
           "User authentication"
@@ -185,7 +185,7 @@
         }
       }
     },
-    "/logout": {
+    "/auth/logout": {
       "post": {
         "tags": [
           "User authentication"
